<resources>
    <string name="app_name">VocabUnity-Android</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">User Email</string>
    <string name="password">Password</string>
    <string name="newUser">New User Sign Up</string>
    <string name="login_paragraph">Sign In to Continue</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="addToPostButton">add to post button</string>

</resources>